// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt text-link Props icon after 1`] = `
<a href="https://google.com"
   target="_blank"
   rel="noopener"
   class="e-bolt-text-link"
>
  This is a text link
  <span class="e-bolt-text-link__icon-after"
        aria-hidden="true"
  >
    <svg class="e-bolt-icon"
         xmlns="http://www.w3.org/2000/svg"
         viewbox="0 0 32 32"
         aria-hidden="true"
    >
      <path fill="#151619"
            fill-rule="evenodd"
            d="M12.4 5.4c-.6-.6-1.6-.6-2.2 0s-.6 1.6 0 2.3l8.4 8.3-8.3 8.3c-.6.6-.6 1.6 0 2.2.3.3.7.5 1 .5.4 0 .8-.2 1.1-.5l9.4-9.4c.6-.6.6-1.6 0-2.2z"
            clip-rule="evenodd"
      >
      </path>
    </svg>
  </span>
</a>
`;

exports[`Bolt text-link Props reverse underline 1`] = `
<a href="https://google.com"
   target="_blank"
   rel="noopener"
   class="e-bolt-text-link e-bolt-text-link--reversed-underline"
>
  This is a text link
</a>
`;

exports[`Bolt text-link default 1`] = `
<a href="https://google.com"
   target="_blank"
   rel="noopener"
   class="e-bolt-text-link"
>
  This is a text link
</a>
`;
